Fix alignment for when there are maximum number of cards showing.

--- a/csfieldguide/static/interactives/binary-cards/css/binary-cards.css
+++ b/csfieldguide/static/interactives/binary-cards/css/binary-cards.css
@@ -64,3 +64,6 @@
   background: white;
   color: black;
 }
+h3, h5, p {
+  text-align: left;
+}
